test/fail/io/write_to_read_file.lly
#[
IOError: File not open for writing.
Traceback:
    File "[builtin]", from file::write
    File "write_to_read_file.lly", from __main__ at line 8
]#

stdin.write("123")
